<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/conatactViewMarginTop"
        android:weightSum="4">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:textFontWeight="900"
            android:textSize="@dimen/fieldTextZide"
            />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/fn_filed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/conatactViewMarginTop"
        android:weightSum="4">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:textFontWeight="900"
            android:textSize="@dimen/fieldTextZide"

            />
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/ln_filed">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/conatactViewMarginTop"
        android:weightSum="4">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:textFontWeight="900"
            android:textSize="@dimen/fieldTextZide"

            />
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/num_filed">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/conatactViewMarginTop"
        android:weightSum="4">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:textFontWeight="900"
            android:textSize="@dimen/fieldTextZide"

            />
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/email_field">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/conatactViewMarginTop"
        android:weightSum="4">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:layout_weight="2"
            android:textAlignment="textStart"
            android:textFontWeight="900"
            android:textSize="@dimen/fieldTextZide"
            />
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/job_filed">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">


    </LinearLayout>
</LinearLayout>